syntax = "proto3";

package remote_shell;

service RemoteCommand {
  rpc send_command (CommandRequest) returns (CommandReply);
}

message CommandRequest {
  string cmd_name = 1;
  repeated string cmd_args = 2;
}

message CommandReply {
  string output = 1;
}
